--- a/home.html
+++ b/home.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>
-            Giochino simpaticoh
+            Giochino simpatico
         </title>
     </head>
     <img>
         <h1>
-            Mappah
+            Mappa
         </h1>
         <img src="MAPPA.png">
     </Body>
